[project]
name = "daily-bonus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "requests>=2.33.0",
    "telegram>=0.0.1",
]
