[project]
name = "daily-bonus"
version = "0.1.0"
description = "自动签到脚本，支持 V2EX、Bilibili、Yamibo、Yurifans、赛马娘网页签到、哔咔漫画"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl_cffi>=0.7",
    "lxml>=6.0.2",
    "pycryptodome>=3.20",
    "requests>=2.32.5",
    "python-telegram-bot>=22.0",
]
